--- a/p2_continuous-control/DDPG.ipynb
+++ b/p2_continuous-control/DDPG.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "from unityagents import UnityEnvironment\n",
     "\n",
-    "\n",
     "import random\n",
     "import torch\n",
     "import numpy as np\n",
@@ -90,24 +89,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 33) (20, 4)\n",
+      "20 20 20\n",
+      "(33,) 0.0 False\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'done' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-ebcbc0e86f18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mddpg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_episodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_t\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m700\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-ebcbc0e86f18>\u001b[0m in \u001b[0;36mddpg\u001b[0;34m(n_episodes, max_t)\u001b[0m\n\u001b[1;32m     20\u001b[0m             \u001b[0mstates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext_states\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;31m#score += reward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mdone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mscores_deque\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'done' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def ddpg(n_episodes=2000, max_t=700):\n",
     "    scores_deque = deque(maxlen=100)\n",
     "    scores = []\n",
     "    max_score = -np.Inf\n",
     "    for i_episode in range(1, n_episodes+1):\n",
-    "        state = env.reset()\n",
+    "        states = env.reset(train_mode=True)[brain_name].vector_observations\n",
     "        agent.reset()\n",
     "        score = 0\n",
     "        for t in range(max_t):\n",
-    "            action = agent.act(state)\n",
-    "            next_state, reward, done, _ = env.step(action)\n",
+    "            actions = agent.act(states)\n",
+    "            print(states.shape, actions.shape)\n",
+    "            env_info = env.step(actions)[brain_name]\n",
+    "            next_states = env_info.vector_observations\n",
+    "            rewards = env_info.rewards\n",
+    "            dones = env_info.local_done\n",
+    "            print(len(next_states), len(rewards), len(dones))\n",
+    "            print(next_states[0].shape, rewards[0], dones[0])\n",
+    "            #next_states, rewards, dones, _ = env.step(actions)\n",
     "            #agent.step(state, action, reward, next_state, done)\n",
-    "            state = next_state\n",
-    "            score += reward\n",
+    "            states = next_states\n",
+    "            #score += reward\n",
     "            if done:\n",
     "                break \n",
     "        scores_deque.append(score)\n",
@@ -119,7 +147,7 @@
     "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)))   \n",
     "    return scores\n",
     "\n",
-    "scores = ddpg()\n",
+    "scores = ddpg(n_episodes=1, max_t=700)\n",
     "\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
